erDiagram
  TENANTS ||--o{ SITE_TENANTS : manages
  SITES ||--o{ SITE_TENANTS : linked_to
  SITES ||--o{ STORES : contains
  TENANTS ||--o{ STORES : owns
  TENANTS ||--o{ USERS : employs
  TENANTS ||--o{ VENDORS : contracts
  TENANTS ||--o{ COST_CENTRES : budgets
  USERS ||--o{ USER_COST_CENTRES : allocated_to
  COST_CENTRES ||--o{ USER_COST_CENTRES : includes
  TENANTS ||--o{ ORG_UNITS : structures
  ORG_UNITS ||--o{ ORG_UNITS : parent_of
  USERS ||--o{ USER_ORG_ASSIGNMENTS : assigned_to
  ORG_UNITS ||--o{ USER_ORG_ASSIGNMENTS : filled_by
  ROLES ||--o{ USER_ORG_ASSIGNMENTS : role_for
  USERS ||--o{ USER_ROLES : has
  ROLES ||--o{ USER_ROLES : assigned
  ROLES ||--o{ ROLE_PERMISSIONS : grants
  PERMISSIONS ||--o{ ROLE_PERMISSIONS : included
  USERS ||--o{ SPENDING_EVENTS : logs
  COST_CENTRES ||--o{ SPENDING_EVENTS : funds
  USERS ||--o{ APPROVER_LIMITS : limits_for
  COST_CENTRES ||--o{ APPROVER_LIMITS : scoped_to
  USERS ||--o{ INSTANT_BUDGET_REQUESTS : requests
  COST_CENTRES ||--o{ INSTANT_BUDGET_REQUESTS : draws_from
  STORES ||--o{ INSTANT_BUDGET_REQUESTS : optional_store
  USERS ||--o{ APPROVAL_DELEGATIONS : delegates_from
  USERS ||--o{ APPROVAL_DELEGATIONS : delegates_to

